--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "inferno-seed",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://crazy4groovy.github.io/inferno-seed",
   "dependencies": {
     "inferno": "^3.10.1",
     "inferno-component": "^3.10.1",
@@ -11,6 +12,8 @@
     "redux": "^3.7.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "inferno-scripts start",
     "build": "inferno-scripts build",
     "test": "inferno-scripts test --env=jsdom",
@@ -18,6 +21,7 @@
     "format": "prettier --single-quote --no-semi --write --trailing-comma es5 src/*"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "inferno-devtools": "^3.10.1",
     "prettier": "^1.10.2"
   }
