--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "inferno-redux": "^3.10.1",
     "inferno-router": "^3.10.1",
     "inferno-scripts": "5.0.0",
-    "redux": "^3.7.2"
+    "prop-types": "^15.6.0",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "predeploy": "npm run build",
