--- a/package.json
+++ b/package.json
@@ -3,30 +3,61 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://crazy4groovy.github.io/inferno-seed",
+  "scripts": {
+    "build": "inferno-scripts build",
+    "deploy": "gh-pages -d build",
+    "eject:DANGEROUS": "inferno-scripts eject",
+    "lint:BUGGY": "xo --fix src/",
+    "predeploy": "npm run build",
+    "start": "inferno-scripts start",
+    "test": "inferno-scripts test --env=jsdom"
+  },
   "dependencies": {
     "inferno": "^3.10.1",
     "inferno-component": "^3.10.1",
     "inferno-redux": "^3.10.1",
     "inferno-router": "^3.10.1",
-    "inferno-scripts": "5.0.0",
+    "inferno-scripts": "^5.0.0",
     "prop-types": "^15.6.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0"
   },
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "inferno-scripts start",
-    "build": "inferno-scripts build",
-    "test": "inferno-scripts test --env=jsdom",
-    "eject": "//DONT inferno-scripts eject",
-    "format": "prettier --single-quote --no-semi --write --trailing-comma es5 src/*"
-  },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "eslint-config-xo": "^0.20.1",
+    "eslint-config-xo-inferno": "^0.11.1",
+    "eslint-plugin-inferno": "^7.6.0",
     "gh-pages": "^1.1.0",
     "inferno-devtools": "^3.10.1",
-    "prettier": "^1.10.2"
+    "xo": "^0.20.3"
+  },
+  "xo": {
+    "rules": {
+      "unicorn/filename-case": 0,
+      "object-curly-spacing": [
+        "error",
+        "always"
+      ],
+      "no-negated-condition": 1,
+      "no-alert": 0,
+      "import/no-unassigned-import": 0,
+      "import/no-named-as-default-member": 1
+    },
+    "envs": [
+      "browser"
+    ],
+    "prettier": true,
+    "parser": "babel-eslint",
+    "extends": [
+      "xo-inferno"
+    ],
+    "space": true,
+    "semicolon": false
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "bracketSpacing": true
   }
 }
